fixed reply to replies not showing unless signed in and other small changes

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ body, html {
 }
 
 .post-username {
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
 .post-time { 
